azure/k8s/4-example/2-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-v2-secure
spec:
  selector:
    matchLabels:
      app: echoserver-v2-secure
  replicas: 1
  template:
    metadata:
      labels:
        app: echoserver-v2-secure
    spec:
      containers:
        - image: k8s.gcr.io/e2e-test-images/echoserver:2.5
          name: echoserver-v2-secure
          ports:
            - containerPort: 8080
