azure/k8s/4-example/4-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver-v2-secure
  annotations:
    cert-manager.io/cluster-issuer: production
spec:
  ingressClassName: external-nginx
  rules:
    - host: echo.drajj.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: echoserver-v2-secure
                port:
                  number: 8080
  tls:
    - hosts:
        - echo.drajj.com
      secretName: echo-drajj-com
